--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
 
   <a href="google-search.html" class="nav-link"><i class="fa fa-search-plus"></i><span>Resources</span></a>
 
-  <a href="#" id="logout" class="nav-link"><i class="fa fa-sign-out-alt"></i><span>Logout</span></a>
+  <a href="signup.html" id="logout" class="nav-link"><i class="fa fa-sign-out-alt"></i><span>Logout</span></a>
 </nav>
 
     </aside>
